--- a/mini_minecraft_basecode/glsl.qrc
+++ b/mini_minecraft_basecode/glsl.qrc
@@ -4,5 +4,7 @@
         <file>glsl/lambert.vert.glsl</file>
         <file>glsl/flat.frag.glsl</file>
         <file>glsl/flat.vert.glsl</file>
+        <file>glsl/texture.frag.glsl</file>
+        <file>glsl/texture.vert.glsl</file>
     </qresource>
 </RCC>
